SubBt/force-app/main/default/objects/Offering__c/Offering__c.object-meta.xml
<CustomObject>
    <label>Offering</label>
    <nameField>
        <label>Offering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>