SubBt/force-app/main/default/objects/Offering__c/fields/Amendments__c.field-meta.xml
<CustomField>
    <fullName>Amendments__c</fullName>
    <label>Amendments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>