SubBt/force-app/main/default/objects/Offering__c/fields/Buyer_s_Lender__c.field-meta.xml
<CustomField>
    <fullName>Buyer_s_Lender__c</fullName>
    <label>Buyer&apos;s Lender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>