SubBt/force-app/main/default/objects/Offering__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <inlineHelpText>Date of the Scheduled Closing.</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>