SubBt/force-app/main/default/objects/Offering__c/fields/Inspection_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Expiration_Date__c</fullName>
    <label>Inspection Expiration Date</label>
    <type>Date</type>
</CustomField>