SubBt/force-app/main/default/objects/Offering__c/fields/Listing_Office__c.field-meta.xml
<CustomField>
    <fullName>Listing_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Offerings</relationshipLabel>
    <relationshipName>Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>