SubBt/force-app/main/default/objects/Offering__c/fields/Mutual_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Acceptance_Date__c</fullName>
    <label>Mutual Acceptance Date</label>
    <type>Date</type>
</CustomField>