SubBt/force-app/main/default/objects/Offering__c/fields/Offer_By__c.field-meta.xml
<CustomField>
    <fullName>Offer_By__c</fullName>
    <label>Offer By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Realtor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>