SubBt/force-app/main/default/objects/Offering__c/fields/Offer_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Offer_Expiration__c</fullName>
    <label>Offer Expiration</label>
    <type>DateTime</type>
</CustomField>