SubBt/force-app/main/default/objects/Offering__c/fields/Offer_Id__c.field-meta.xml
<CustomField>
    <fullName>Offer_Id__c</fullName>
    <label>Offer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>