SubBt/force-app/main/default/objects/Offering__c/fields/Parcel__c.field-meta.xml
<CustomField>
    <fullName>Parcel__c</fullName>
    <label>Parcel #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>