SubBt/force-app/main/default/objects/Offering__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Financing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>