SubBt/force-app/main/default/objects/Offering__c/fields/SB_Lag__c.field-meta.xml
<CustomField>
    <fullName>SB_Lag__c</fullName>
    <label>SB Lag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>