SubBt/force-app/main/default/objects/Offering__c/fields/Seller_s_Name_on_Title__c.field-meta.xml
<CustomField>
    <fullName>Seller_s_Name_on_Title__c</fullName>
    <label>Seller&apos;s Name on Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>