SubBt/force-app/main/default/objects/Offering__c/fields/Selling_Broker__c.field-meta.xml
<CustomField>
    <fullName>Selling_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selling Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Offerings (Selling Broker)</relationshipLabel>
    <relationshipName>Offerings3</relationshipName>
    <type>Lookup</type>
</CustomField>