SubBt/force-app/main/default/objects/Offering__c/fields/SO_Lag__c.field-meta.xml
<CustomField>
    <fullName>SO_Lag__c</fullName>
    <label>SO Lag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>