SubBt/force-app/main/default/objects/Offering__c/fields/Title_Received__c.field-meta.xml
<CustomField>
    <fullName>Title_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title Received</label>
    <type>Checkbox</type>
</CustomField>