SubBt/force-app/main/default/objects/Offering__c/fields/Turn_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Turn_in_Date__c</fullName>
    <label>Turn in Date</label>
    <type>Date</type>
</CustomField>