SubBt/force-app/main/default/objects/Offering__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Offered_Amount__c</columns>
    <columns>Buyer_s_Name_on_Title__c</columns>
    <columns>Buyer_s_Lender__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Deposit_Amount__c</columns>
    <columns>Escrow_Company__c</columns>
    <columns>Legal_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>